<resources>
    <string name="app_name">Share Food</string>

    <string name="google_api_key">AIzaSyDVYUmPq2fwUsBB-iHzEv0nqpixCTCvX6M</string>


    <!--login-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">or</string>
    <string name="signin_with">Sign in with</string>
    <string name="dont_have_account">Dont have an account? Register Now</string>

    <!--sign up-->
    <string name="user_name">User name</string>
    <string name="confirm_password">Confirm Password</string>
    <string-array name="type">
        <item>Registering as</item>
        <item>Individual</item>
        <item>Restaurant</item>
        <item>Ngo</item>
        <item>Others</item>
    </string-array>
    <string name="address">Address</string>


    <!--forgot password-->
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>


    <!--dashboard-->
    <string name="dashboard">Dashboard</string>
    <string name="time">Time</string>
    <string name="food_items">Food items:</string>
    <string name="sufficient_for"> Sufficient for:</string>
    <string name="view_on_map">View on Map</string>

    <!--view post-->
    <string name="pickup">Pick until:</string>
    <string name="location">Location:</string>
    <string name="sharing_as">Sharing as:</string>
    <string name="repetitive">Repetitive</string>


    <!--add post-->
    <string name="add_post">Add Post</string>
    <string name="pick">Pick until</string>
    <string name="items">Food items</string>
    <string name="add">Add</string>
    <string name="phone_number">Phone  Number</string>

    <!--settings-->
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change App Language</string>

    <!--search-->
    <string name="filter">Filter</string>
    <string name="set_filter">Set Filter</string>
    <string name="name">Name</string>

    <string-array name="language_array">
        <item>English</item>
        <item>Urdu</item>
    </string-array>


    <!--change password-->
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
</resources>
