<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/twenty_margin"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/eighteen_text_size"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:theme="@style/MyTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/twenty_margin"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_forgot_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/eight_margin"
                android:textColorHint="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_margin"
            app:layout_constraintTop_toBottomOf="@+id/email_forgot">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fourty_margin"
                android:text="@string/cancel"
                android:background="@color/colorPrimary"
                android:layout_marginRight="@dimen/five_margin"
                app:layout_constraintRight_toLeftOf="@+id/btn_ok"/>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fourty_margin"
                android:text="@string/ok"
                android:background="@color/colorPrimary"
                android:layout_marginRight="@dimen/twenty_margin"
                app:layout_constraintEnd_toEndOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>