<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_five_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/mid_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/thirty_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_layout"
                        style="@style/AppTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/twenty_margin"
                        android:layout_marginRight="@dimen/twenty_margin"
                        android:textColorHint="@color/colorAccent"
                        android:theme="@style/MyTextInputLayout"
                        app:layout_constraintTop_toTopOf="parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/eight_margin"
                            android:textColor="@color/colorAccent"
                            android:textColorHint="@color/colorAccent" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_layout"
                        style="@style/AppTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/twenty_margin"
                        android:layout_marginTop="@dimen/thirty_margin"
                        android:layout_marginRight="@dimen/twenty_margin"
                        android:textColorHint="@color/colorAccent"
                        android:theme="@style/MyTextInputLayout"
                        app:layout_constraintTop_toBottomOf="@id/email_layout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:textColor="@color/colorAccent"
                            android:padding="@dimen/eight_margin"
                            android:textColorHint="@color/colorAccent" />
                    </android.support.design.widget.TextInputLayout>


                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/forget_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten_margin"
                    android:layout_marginRight="@dimen/ten_margin"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/eighteen_text_size"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mid_layout" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/forget_text">


                    <Button
                        android:id="@+id/buttonSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/fourty_margin"
                        android:layout_marginTop="@dimen/ten_margin"
                        android:background="@color/colorPrimary"
                        android:text="@string/signin"
                        android:textAllCaps="false"
                        android:textSize="@dimen/sixteen_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textOr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ten_margin"
                        android:text="Or"
                        android:textColor="@color/black"
                        android:textSize="@dimen/eighteen_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

                    <TextView
                        android:id="@+id/textSignwith"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ten_margin"
                        android:text="@string/signin_with"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textOr" />

                    <Button
                        android:id="@+id/buttonFB"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/fourty_margin"
                        android:layout_marginTop="@dimen/ten_margin"
                        android:background="@color/colorPrimary"
                        android:text="@string/facebook"
                        android:textAllCaps="false"
                        android:textSize="@dimen/sixteen_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textSignwith" />
                </android.support.constraint.ConstraintLayout>


                <TextView
                    android:id="@+id/textRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten_margin"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_layout" />


            </android.support.constraint.ConstraintLayout>

        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>