<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/old_pwd"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_margin"
            android:layout_marginTop="@dimen/ten_margin"
            android:layout_marginRight="@dimen/twenty_margin"
            android:textColorHint="@color/colorAccent"
            android:theme="@style/MyTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/oldPwdEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:padding="@dimen/eight_margin"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_pwd"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_margin"
            android:layout_marginTop="@dimen/ten_margin"
            android:layout_marginRight="@dimen/twenty_margin"
            android:theme="@style/MyTextInputLayout"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/old_pwd">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/newPwdEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:padding="@dimen/eight_margin"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_pwd"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_margin"
            android:layout_marginTop="@dimen/ten_margin"
            android:layout_marginRight="@dimen/twenty_margin"
            android:theme="@style/MyTextInputLayout"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/new_pwd">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:padding="@dimen/eight_margin"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
</layout>