<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <include
            android:id="@+id/addToolbar"
            layout="@layout/app_toolbar"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/add_photo_list"
                    android:layout_width="match_parent"
                    android:layout_height="180dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_layout"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_margin"
                    android:layout_marginRight="@dimen/twenty_margin"
                    android:textColorHint="@color/colorAccent"
                    android:theme="@style/MyTextInputLayout"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:padding="@dimen/eight_margin"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_layout"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_margin"
                    android:layout_marginTop="@dimen/ten_margin"
                    android:layout_marginRight="@dimen/twenty_margin"
                    android:textColorHint="@color/colorAccent"
                    android:theme="@style/MyTextInputLayout"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_email_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/eight_margin"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_layout"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_margin"
                    android:layout_marginTop="@dimen/ten_margin"
                    android:layout_marginRight="@dimen/twenty_margin"
                    android:textColorHint="@color/colorAccent"
                    android:theme="@style/MyTextInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/email_layout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_number_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:padding="@dimen/eight_margin"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sufficient_for_layout"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_margin"
                    android:layout_marginTop="@dimen/ten_margin"
                    android:layout_marginRight="@dimen/twenty_margin"
                    android:textColorHint="@color/colorAccent"
                    android:theme="@style/MyTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_sufficient_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sufficient_for"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:padding="@dimen/eight_margin"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pick_layout"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_margin"
                    android:layout_marginTop="@dimen/ten_margin"
                    android:layout_marginRight="@dimen/twenty_margin"
                    android:textColorHint="@color/colorAccent"

                    android:theme="@style/MyTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_picktime_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/pick"
                        android:imeOptions="actionNext"
                        android:padding="@dimen/eight_margin"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_location_layout"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_margin"
                    android:layout_marginTop="@dimen/ten_margin"
                    android:layout_marginRight="@dimen/twenty_margin"
                    android:clickable="true"
                    android:textColorHint="@color/colorAccent"
                    android:theme="@style/MyTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_location_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/location"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:padding="@dimen/eight_margin"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fooditems_layout"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_margin"
                    android:layout_marginTop="@dimen/ten_margin"
                    android:layout_marginRight="@dimen/twenty_margin"
                    android:textColorHint="@color/colorAccent"
                    android:theme="@style/MyTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_fooditems_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/items"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:padding="@dimen/eight_margin"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/twenty_margin"
                    android:layout_marginTop="@dimen/ten_margin"
                    android:layout_marginRight="@dimen/twenty_margin"
                    android:layout_marginBottom="@dimen/ten_margin"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/add_post"
                    android:textAllCaps="false" />

            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>