<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten_margin"
        android:background="@color/white">


        <!--<android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
           >-->


        <ImageView
            android:id="@+id/image_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@mipmap/ic_launcher"/>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_margin"
            app:layout_constraintTop_toBottomOf="@+id/image_food">

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="description"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_size"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|center"
                android:text="4:54 Pm"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_size"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_margin"
            app:layout_constraintTop_toBottomOf="@+id/description_layout">

            <TextView
                android:id="@+id/textHeadingItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="@string/food_items"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_size"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/text_item_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|center"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_size"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/person_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_margin"
            app:layout_constraintTop_toBottomOf="@+id/item_layout">


            <TextView
                android:id="@+id/text_heading_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="@string/sufficient_for"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_size"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/text_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five_margin"
                android:gravity="right|center"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_size"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_margin"
            android:layout_marginLeft="@dimen/ten_margin"
            android:layout_marginRight="@dimen/ten_margin"
            android:layout_marginBottom="@dimen/fifteen_margin"
            app:layout_constraintTop_toBottomOf="@+id/person_layout">

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_size"
                android:gravity="left|center"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/view_on_map"
                android:textColor="@color/black"
                android:gravity="right|center"
                android:textSize="@dimen/sixteen_size"/>
        </android.support.constraint.ConstraintLayout>


        <!--</android.support.v7.widget.CardView>-->
    </android.support.constraint.ConstraintLayout>
</layout>